--- a/src/pages/diensten.astro
+++ b/src/pages/diensten.astro
@@ -13,8 +13,8 @@ const description = 'Ik herstel uw elektrische en/of elektronische toestellen. O
 
 <Layout title={title} description={description}>
     <div class="container grid grid-cols-12">
-        <h1 class="col-span-12 mb-8">Diensten</h1>
-        <h2 class="mb-12 col-span-12 sm:col-span-8 xl:col-span-6">Heeft u een elektronisch toestel dat aan reparatie toe is? Een oud stuk speelgoed dat niet meer werkt als voorheen? Wij kunnen u helpen! Hieronder een overzicht van de diensten we aanbieden.</h2>
+        <h1 class="col-span-12 md:col-span-8 mb-8">Diensten</h1>
+        <h2 class="mb-12 col-span-12 md:col-span-8 xl:col-span-6">Heeft u een elektronisch toestel dat aan reparatie toe is? Een oud stuk speelgoed dat niet meer werkt als voorheen? Wij kunnen u helpen! Hieronder een overzicht van de diensten we aanbieden.</h2>
         <Card 
             cardTitle="Elektronische toestellen" 
             cardImage={electronicsImg}
