--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const description = 'Elektro repair Mortsel, voor al uw elektrische en elektroni
 
 <Layout description={description} classes="md:pt-24 pb-24 md:pb-40">         
         <div class="md:container flex flex-col-reverse md:flex-row xl:grid xl:grid-cols-12 gap-10">
-            <div class="content__text container flex-1 xl:col-span-5 flex flex-col">
+            <div class="content__text container flex-1 col-span-12 sm:col-span-10 md:col-span-8 xl:col-span-5 flex flex-col">
                 <h1 class="mb-8">Geef uw oud toestel een nieuw leven</h1>
                 <h2 class="mb-8">Elektro repair Mortsel, voor al uw elektrische en elektronische herstellingen.</h2>
                 <a href="/contact" class="btn btn--gap mr-auto">Contacteer ons</a>
