fixed firefox bug

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -200,6 +200,7 @@ const { cardTitle, cardImage } = Astro.props
             border: 20px solid $darkbrown;
             border-radius: 40px 190px 40px 80px;
             object-fit: cover;
+            height: 100%;
 
             @media (max-width: 768px) {
                 border: 14px solid $darkbrown;
