--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ interface Props {
 
 const { title, description, classes } = Astro.props as Props;
 
-const mainClasses = classes ? classes : "pt-16 md:pt-24 pb-24 md:pb-40";
+const mainClasses = classes ? classes : "pt-16 md:pt-24 / pb-24 md:pb-40";
 
 ---
 
