--- a/src/components/accordeon/Accordeon.astro
+++ b/src/components/accordeon/Accordeon.astro
@@ -1,6 +1,6 @@
 
 
-<article class="accordeon grid grid-cols-12 md:grid-cols-11 col-span-12 md:col-span-11">
+<article class="accordeon || grid | grid-cols-12 md:grid-cols-11 | col-span-12 md:col-span-11">
         <slot />
 </article>
 
