--- a/src/pages/algemene-voorwaarden.astro
+++ b/src/pages/algemene-voorwaarden.astro
@@ -5,8 +5,8 @@ const title = 'Algemene voorwaarden';
 const description = 'Algemene voorwaarden van Elektro repair Mortsel';
 ---
 <Layout description={description} title={title}>         
-    <div class="container grid grid-cols-12">
-        <div class="col-span-12 md:col-span-8 flex flex-col">
+    <div class="container | grid | grid-cols-12">
+        <div class="flex flex-col | col-span-12 md:col-span-8">
                 <h1 class="mb-12">Algemene voorwaarden</h1>
                 <div>
                         <h2>Kosten</h2>
