--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,13 +5,13 @@ const title = 'Contacteer ons';
 const description = 'Contacteer voor een reparatie in Mortsel';
 ---
 <Layout description={description} title={title}>         
-    <div class="container grid grid-cols-12 lg:gap-10 auto-rows-auto">
-        <div class="col-span-12 md:col-span-8 flex flex-col">
+    <div class="container | grid | grid-cols-12 | lg:gap-10">
+        <div class="flex flex-col | col-span-12 md:col-span-8">
             <h1 class="mb-8">Contacteer ons</h1>
             <h2 class="mb-12">Interesse in een reparatie? Contacteer ons via het onderstaande formulier of onze contactgegevens</h2>
         </div>
-        <div class="contact__content col-span-12 grid grid-cols-12">
-            <form class="col-span-12 md:col-span-6 xl:col-span-7 md:col-start-2 p-8 md:px-6 md:py-6 lg:px-8 lg:py-8" data-netlify="true" name="contact">
+        <div class="contact__content || grid | grid-cols-12 | col-span-12">
+            <form class="col-span-12 md:col-span-6 xl:col-span-7 | md:col-start-2 | p-8 md:p-6 lg:p-8" data-netlify="true" name="contact">
                 <div>
                     <label for="name">Naam</label>
                     <input 
@@ -28,7 +28,6 @@ const description = 'Contacteer voor een reparatie in Mortsel';
                         placeholder="Email"
                         name="email" 
                         id="email"
-                        value=""
                     />
                 </div>
                 <div>
@@ -38,7 +37,6 @@ const description = 'Contacteer voor een reparatie in Mortsel';
                         placeholder="Telefoon" 
                         name="phone"
                         id="phone"
-                        value=""
                     />
                 </div>
                 <div>
@@ -48,7 +46,6 @@ const description = 'Contacteer voor een reparatie in Mortsel';
                         placeholder="Typenr. apparaat" 
                         name="typenumber"
                         id="typenumber"
-                        value=""
                     />
                 </div>
                 <div>
@@ -57,25 +54,24 @@ const description = 'Contacteer voor een reparatie in Mortsel';
                         placeholder="Bericht" 
                         name="message"
                         id="message"
-                        value=""
                     ></textarea>
                 </div>
                 <button type="submit" class="btn">Verstuur uw bericht</button>
             </form>
-            <aside class="contact-details col-span-12 md:col-span-5 flex flex-col mt-auto pt-8 pb-12 px-8 md:p-6 lg:p-8">
-                <a class="contact__logo mb-8 md:mb-12" href="/">Elektro repair Mortsel</a>
-                <a class="mb-4" href="tel:0497656751"><i class="fa-solid fa-phone mr-2"></i> 0497 65 67 51</a>
-                <a class="mb-4" href="mailto:info@elektrorepairmortsel.be"><i class="fa-solid fa-envelope mr-2"></i> info@elektrorepairmortsel.be</a> 
-                <div class="flex mb-4 contact__address">
-                    <i class="fa-solid fa-location-dot mt-1 mr-4"></i> 
+            <aside class="contact-details || flex flex-col | col-span-12 md:col-span-5 | mt-auto | pt-8 / pb-12 + px-8 / md:p-6 lg:p-8">
+                <a class="contact__logo || mb-8 md:mb-12" href="/">Elektro repair Mortsel</a>
+                <a class="mb-4" href="tel:0497656751"><i class="fa-solid fa-phone || mr-2"></i> 0497 65 67 51</a>
+                <a class="mb-4" href="mailto:info@elektrorepairmortsel.be"><i class="fa-solid fa-envelope || mr-2"></i> info@elektrorepairmortsel.be</a> 
+                <div class="contact__address || flex | mb-4">
+                    <i class="fa-solid fa-location-dot || mt-1 / mr-4"></i> 
                     <p>
                         Elektro repair Mortsel<br>
                         Sint-Annalei 15<br>
                         2640 Mortsel
                     </p>
                 </div>
-                <div class="flex contact__business">
-                    <i class="fa-solid fa-briefcase mr-4"></i>
+                <div class="contact__business || flex">
+                    <i class="fa-solid fa-briefcase || mr-4"></i>
                     <p>BTWnr.: BE0790519118</p>
                 </div>
             </aside>
