--- a/src/pages/cookie-policy.astro
+++ b/src/pages/cookie-policy.astro
@@ -5,8 +5,8 @@ const title = 'Cookie policy';
 const description = 'Cookie policy van Elektro repair Mortsel';
 ---
 <Layout description={description} title={title}>         
-    <div class="container grid grid-cols-12 lg:gap-10 auto-rows-auto">
-        <div class="col-span-12 md:col-span-8 flex flex-col">
+    <div class="container | grid | grid-cols-12 | lg:gap-10">
+        <div class="flex flex-col | col-span-12 md:col-span-8">
                 <h1 class="mb-12">Cookie policy</h1>
                 <div>
                         <h2>1. Wat zijn cookies?</h2>
