toggling classes fixed

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,7 +30,7 @@ const currentPath = pathname.slice(1);
 
 <script>
 	document.querySelector(".togglebox").addEventListener("click", () => {
-		document.querySelector("header").classList.toggle(" // dropdown-active");
+		document.querySelector("header").classList.toggle("dropdown-active");
   });
 </script>
 
