--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ const pathname = new URL(Astro.request.url).pathname;
 const currentPath = pathname.slice(1);
 ---
 
-{endDateBool && endDate > new Date() && <Unavailable date={endDateTLS} />}
+{endDateBool && <Unavailable date={endDateTLS} />}
 
 
 <header>
