--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 
 import Unavailable from "./Unavailable.astro";
 
-const endDateBool = false;
+const endDateBool = true;
 const endDate = new Date('2024-02-04T00:00:00');
 const options = { timeZone: 'Europe/Brussels', day: 'numeric', month: 'numeric', year: 'numeric' };
 const endDateTLS = endDate.toLocaleString('en-BE', options);
