updated algemene voorwaarden

--- a/src/pages/algemene-voorwaarden.astro
+++ b/src/pages/algemene-voorwaarden.astro
@@ -11,7 +11,7 @@ const description = 'Algemene voorwaarden van Elektro repair Mortsel';
                 <div>
                         <h2>Kosten</h2>
                         <p>Werkuren worden aangerekend per begonnen half uur, met een minimum van 1 uur.</p>
-                        <p>Verplaatstingskosten worden aangerekend aan 0,4 euro/km.</p>
+                        <p>Verplaatsingskosten met de wagen worden aangerekend aan 0,4 euro/km. Bij andere verplaatsingen buiten Mortsel gelden de werkuren van vertrek tot terugkomst in de staanplaats.</p>
                         <p>Een voorschot is vereist bij het bestellen van wisselstukken.</p>
                         <p>De standaard bestekkost is 0,5 uur voor een eenvoudig toestel en 1 werkuur voor een complex toestel.</p>
                         <p>Voor niet afgehaalde toestellen wordt een recyclagekost van 5 euro aangerekend</p>
