reversed the attempt of altering the e-mail subject, added extra info on the 'algemene voorwaarden' page

--- a/src/pages/algemene-voorwaarden.astro
+++ b/src/pages/algemene-voorwaarden.astro
@@ -10,7 +10,7 @@ const description = 'Algemene voorwaarden van Elektro repair Mortsel';
                 <h1 class="mb-12">Algemene voorwaarden</h1>
                 <div>
                         <h2>Kosten</h2>
-                        <p>Werkuren worden aangerekend per begonnen half uur, met een minimum van 1 uur.</p>
+                        <p>Werkuren worden aangerekend per begonnen half uur, met een minimum van 1 uur. De werkuren omvatten ook het opzoeken en bestellen van vervangonderdelen.</p>
                         <p>Verplaatsingskosten met de wagen worden aangerekend aan 0,4 euro/km. Bij andere verplaatsingen buiten Mortsel gelden de werkuren van vertrek tot terugkomst in de staanplaats.</p>
                         <p>Een voorschot is vereist bij het bestellen van wisselstukken.</p>
                         <p>De standaard bestekkost is 0,5 uur voor een eenvoudig toestel en 1 werkuur voor een complex toestel.</p>
