--- a/src/pages/over-ons.astro
+++ b/src/pages/over-ons.astro
@@ -11,7 +11,7 @@ const description = 'Over Elektro repair Mortsel, een eenmansreparatiedienst voo
     <div class="md:container | flex flex-col-reverse md:flex-row xl:grid | xl:grid-cols-12 | gap-10">
         <div class="content__text || container | flex flex-col | xl:col-span-5">
             <h1 class="mb-8">Over ons</h1>
-            <h2 class="mb-8"><span>Elektro repair Mortsel een eenmansdienst die u helpt bij het herstellen van allerhande (elektronische) voorwerpen.</span>
+            <h2 class="mb-8"><span>Elektro repair Mortsel is een eenmansdienst die u helpt bij het herstellen van allerhande (elektronische) voorwerpen.</span>
                 <span>Ik heb uitgebreide ervaring in de hersteldienst van Pioneer en ontwikkelde later als ingenieur optomechanische en elektronische toestellen bij Agfa.</span>
                 <span>Ook ben ik actief bij het populaire <a href="https://www.vzwtransitiezuidtrant.be/repair-caf%C3%A9" target="_blank">Repair Café Zuidrand</a>.</span>
             </h2>
