--- a/src/pages/algemene-voorwaarden.astro
+++ b/src/pages/algemene-voorwaarden.astro
@@ -15,6 +15,11 @@ const description = 'Algemene voorwaarden van Elektro repair Mortsel';
                         <p>Een voorschot is vereist bij het bestellen van wisselstukken.</p>
                         <p>De standaard bestekkost is 0,5 uur voor een eenvoudig toestel en 1 werkuur voor een complex toestel.</p>
                         <p>Voor niet afgehaalde toestellen wordt een recyclagekost van 5 euro aangerekend</p>
+                </div>                
+                <div>
+                        <h2>Niet afgehaalde toestellen</h2>
+                        <p>Voor niet afgehaalde toestellen, waarvan de rekening voldaan werd, wordt een extra recyclagekost van 5 euro aangerekend.</p>
+                        <p>Toestellen, die 3 maand na herstelling nog niet afgehaald werden en waarvan de rekening niet voldaan werd, worden eigendom van Elektro repair Mortsel. De kosten voor de onderdelen blijven nog steeds verschuldigd.</p>
                 </div>
                 <div>
                         <h2>Plaats van herstelling</h2>
