--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import { Icon } from 'astro-icon';
 
 import Unavailable from "./Unavailable.astro";
 
-const endDateBool = true;
+const endDateBool = false;
 const endDate = new Date(2024, 8, 22);
 const currentDate = new Date();
 const options = { timeZone: 'Europe/Brussels', day: 'numeric', month: 'numeric', year: 'numeric' };
