--- a/src/pages/algemene-voorwaarden.astro
+++ b/src/pages/algemene-voorwaarden.astro
@@ -37,7 +37,7 @@ const description = 'Algemene voorwaarden van Elektro repair Mortsel';
                         <h2>Betalingen</h2>
                         <p>U hoeft geen BTW te betalen door de bijzondere vrijstelling voor kleine ondernemingen.</p>
                         <p>Betalingen dienen te gebeuren binnen de 14 dagen na het versturen van de factuur.</p>
-                        <p>Na de vervaldatum wordt een administratieve kost aangerekend van 25 euro en een verwijlintrest van 15%.</p>
+                        <p>Na de vervaldatum wordt een administratieve kost aangerekend van 25 euro en een verwijlintrest van 3% per maand.</p>
                 </div>
                 <div>
                         <h2>Geschillen</h2>
