--- a/src/pages/algemene-voorwaarden.astro
+++ b/src/pages/algemene-voorwaarden.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 
 const title = 'Algemene voorwaarden';
-const description = 'Algemene voorwaarden van Elektro repair Mortsel';
+const description = 'Algemene voorwaarden van Elektro Repair Mortsel';
 ---
 <Layout description={description} title={title}>         
     <div class="container | grid | grid-cols-12">
@@ -19,7 +19,7 @@ const description = 'Algemene voorwaarden van Elektro repair Mortsel';
                 <div>
                         <h2>Niet afgehaalde toestellen</h2>
                         <p>Voor niet afgehaalde toestellen, waarvan de rekening voldaan werd, wordt een extra recyclagekost van 5 euro aangerekend.</p>
-                        <p>Toestellen, die 3 maand na herstelling nog niet afgehaald werden en waarvan de rekening niet voldaan werd, worden eigendom van Elektro repair Mortsel. De kosten voor de onderdelen blijven nog steeds verschuldigd.</p>
+                        <p>Toestellen, die 3 maand na herstelling nog niet afgehaald werden en waarvan de rekening niet voldaan werd, worden eigendom van Elektro Repair Mortsel. De kosten voor de onderdelen blijven nog steeds verschuldigd.</p>
                 </div>
                 <div>
                         <h2>Plaats van herstelling</h2>
