--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -59,13 +59,13 @@ const description = 'Contacteer voor een reparatie in Mortsel';
                 <button type="submit" class="btn">Verstuur uw bericht</button>
             </form>
             <aside class="contact-details || flex flex-col | col-span-12 md:col-span-5 | mt-auto | pt-8 / pb-12 + px-8 / md:p-6 lg:p-8">
-                <a class="contact__logo || mb-8 md:mb-12" href="/">Elektro repair Mortsel</a>
+                <a class="contact__logo || mb-8 md:mb-12" href="/">Elektro Repair Mortsel</a>
                 <a class="mb-4" href="tel:0497656751"><i class="fa-solid fa-phone || mr-2"></i> 0497 65 67 51</a>
                 <a class="mb-4" href="mailto:info@elektrorepairmortsel.be"><i class="fa-solid fa-envelope || mr-2"></i> info@elektrorepairmortsel.be</a> 
                 <div class="contact__address || flex | mb-4">
                     <i class="fa-solid fa-location-dot || mt-1 / mr-4"></i> 
                     <p>
-                        Elektro repair Mortsel<br>
+                        Elektro Repair Mortsel<br>
                         Sint-Annalei 15<br>
                         2640 Mortsel
                     </p>
